RESOLVED FIXED278208
[TZone] Fix visionos build when tzone enabled'
https://bugs.webkit.org/show_bug.cgi?id=278208
Summary [TZone] Fix visionos build when tzone enabled'
Dan Hecht
Reported 2024-08-15 20:08:52 PDT
Change 282270@main added a new class where cpp used the new tzone macros but header did not.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-08-15 20:09:02 PDT
Dan Hecht
Comment 2 2024-08-15 20:10:21 PDT
EWS
Comment 3 2024-08-16 08:48:20 PDT
Committed 282352@main (2e1176dabfac): <https://commits.webkit.org/282352@main> Reviewed commits have been landed. Closing PR #32282 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.