[TZone] Fix visionos build when tzone enabled' https://bugs.webkit.org/show_bug.cgi?id=278208 rdar://134007071

Reviewed by Mark Lam.

Change 282270@main added a new class where cpp used the new tzone
macros but header did not.

* Source/WebCore/Modules/webxr/XRGPUSubImage.h:

Canonical link: https://commits.webkit.org/282352@main